test/expected/break_zero.out
[CompoundList]
  [CompoundListCondition, None]
    [ForLoop "i"]
      [CompoundList]
        [CompoundListCondition, None]
          [SimpleCommand "break" "0"]
        [CompoundListCondition, None]
          [SimpleCommand "echo" "unreached"]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "after"]
[Word
  Unquoted "for"
]
[Word
  Unquoted "i"
]
[Word
  Unquoted "in"
]
[Word
  Unquoted "1"
]
[Word
  Unquoted "2"
]
[Word
  Unquoted "do"
]
[Word
  Unquoted "break"
]
[Word
  Unquoted "0"
]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "unreached"
]
[Word
  Unquoted "done"
]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "after"
]
shit: 2:24: error: break count '0' is out of range.
     2 |  for i in 1 2; do break 0; echo unreached; done
       |                         ^~ here.
after
[Code 0]
